# GameVisualisationHelper

./: .gitignore  README.md  teamspeakPlugin.pro
display/: .mainwindow.cpp.un~  .mainwindow.h.un~  CMakeLists.txt  centeredcheckbox.cpp  centeredcheckbox.h  character.cpp  character.h  characteravatarmodel.cpp  characteravatarmodel.h  checkboxdelegate.cpp  checkboxdelegate.h  clandelegate.cpp  clandelegate.h  coretype.h  diaporamamodel.cpp  diaporamamodel.h  display.pro  guiadaptor.cpp  guiadaptor.h  main.cpp  maincontroller.cpp  maincontroller.h  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  mainwindow.ui  org.rolisteam.display  org.rolisteam.display.xml  player.cpp  player.h  presentproxymodel.cpp  presentproxymodel.h  resources.qrc
display/controller/: charactercontroller.cpp  charactercontroller.h  previewcontroller.cpp  previewcontroller.h
display/model/: calendaritemmodel.cpp  calendaritemmodel.h  charactermodel.cpp  charactermodel.h  haikumodel.cpp  haikumodel.h  sortedmodel.cpp  sortedmodel.h  sortfiltermodel.cpp  sortfiltermodel.h
display/qml/: BlurHelper.qml  CalendarItem.qml  Calendrier.qml  Celebrations.qml  CenterContent.qml  CharacterItem.qml  CustomFrame.qml  GridGallery.qml  ImagePathView.qml  ImageView.qml  MapViewer.qml  MapViewerGenerique.qml  Months.qml  Seasons.qml  SheetViewer.qml  Token.qml  aa.scxml  bbb.qmodel  bluritem.frag  glow.frag  glow.vert  grayscale.frag  grayscale.frag.qsb  main.qml  rectangularglow.frag
display/qml/Effect01/: Effect01.qep
display/qml/Effect01/export/: Effect01.qml  effect01.frag  effect01.frag.qsb  effect01.vert  effect01.vert.qsb  qmldir
display/resources/Cops/: file.txt
display/resources/cats/first/: groupe.xcf
display/utils/: iohelper.cpp  iohelper.h
display/widgets/: dragabletableview.cpp  dragabletableview.h  l5rcharactersheetdialog.cpp  l5rcharactersheetdialog.h  l5rcharactersheetdialog.ui
plugin/: .plugin.cpp.un~  plugin.cpp  plugin.cpp~  plugin.h  plugin.pro
